// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit Test for Components (renderer) GitTable Success 1`] = `
<div
  className="card-datatable"
>
  <h1>
    Repositories
  </h1>
  <div
    className="p-datatable p-component p-datatable-responsive-scroll"
    data-pc-name="datatable"
    data-pc-section="root"
    data-scrollselectors=".p-datatable-wrapper"
    id={null}
    style={Object {}}
  >
    <div
      className="p-datatable-header"
      data-pc-section="header"
    >
      <div
        className="flex justify-content-end"
      >
        <span
          className="p-input-icon-left"
        >
          <i
            className="pi pi-search"
          />
          <input
            className="p-inputtext p-component"
            data-pc-name="inputtext"
            data-pc-section="root"
            onBeforeInput={[Function]}
            onChange={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onPaste={[Function]}
            placeholder="Keyword Search"
            value=""
          />
        </span>
      </div>
    </div>
    <div
      className="p-datatable-wrapper"
      data-pc-section="wrapper"
      style={
        Object {
          "maxHeight": null,
          "overflow": "auto",
        }
      }
    >
      <table
        className="p-datatable-table"
        data-pc-section="table"
        role="table"
        style={
          Object {
            "width": "70vw",
          }
        }
      >
        <thead
          className="p-datatable-thead"
          data-pc-name="datatable"
          data-pc-section="thead"
        >
          <tr
            data-pc-section="headerrow"
            role="row"
          >
            <th
              aria-sort="none"
              className="p-sortable-column"
              colSpan={null}
              data-p-filter-column={false}
              data-p-frozen-column={false}
              data-p-highlight={null}
              data-p-reorderable-column={false}
              data-p-resizable-column={false}
              data-p-sortable-column={true}
              data-pc-name="datatable"
              data-pc-section="headercell"
              onClick={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              role="columnheader"
              rowSpan={null}
              style={
                Object {
                  "width": "25%",
                }
              }
              tabIndex={0}
            >
              <div
                className="p-column-header-content"
                data-pc-section="headercontent"
              >
                <span
                  className="p-column-title"
                  data-pc-section="headertitle"
                >
                  Name
                </span>
                <span
                  data-pc-section="sort"
                >
                  <svg
                    aria-hidden={true}
                    className="p-icon p-sortable-column-icon"
                    data-pc-section="sorticon"
                    fill="none"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clipPath="url(#pr_icon_clip_1)"
                    >
                      <path
                        d="M5.64515 3.61291C5.47353 3.61291 5.30192 3.54968 5.16644 3.4142L3.38708 1.63484L1.60773 3.4142C1.34579 3.67613 0.912244 3.67613 0.650309 3.4142C0.388374 3.15226 0.388374 2.71871 0.650309 2.45678L2.90837 0.198712C3.17031 -0.0632236 3.60386 -0.0632236 3.86579 0.198712L6.12386 2.45678C6.38579 2.71871 6.38579 3.15226 6.12386 3.4142C5.98837 3.54968 5.81676 3.61291 5.64515 3.61291Z"
                        fill="currentColor"
                      />
                      <path
                        d="M3.38714 14C3.01681 14 2.70972 13.6929 2.70972 13.3226V0.677419C2.70972 0.307097 3.01681 0 3.38714 0C3.75746 0 4.06456 0.307097 4.06456 0.677419V13.3226C4.06456 13.6929 3.75746 14 3.38714 14Z"
                        fill="currentColor"
                      />
                      <path
                        d="M10.6129 14C10.4413 14 10.2697 13.9368 10.1342 13.8013L7.87611 11.5432C7.61418 11.2813 7.61418 10.8477 7.87611 10.5858C8.13805 10.3239 8.5716 10.3239 8.83353 10.5858L10.6129 12.3652L12.3922 10.5858C12.6542 10.3239 13.0877 10.3239 13.3497 10.5858C13.6116 10.8477 13.6116 11.2813 13.3497 11.5432L11.0916 13.8013C10.9561 13.9368 10.7845 14 10.6129 14Z"
                        fill="currentColor"
                      />
                      <path
                        d="M10.6129 14C10.2426 14 9.93552 13.6929 9.93552 13.3226V0.677419C9.93552 0.307097 10.2426 0 10.6129 0C10.9833 0 11.2904 0.307097 11.2904 0.677419V13.3226C11.2904 13.6929 10.9832 14 10.6129 14Z"
                        fill="currentColor"
                      />
                    </g>
                    <defs>
                      <clipPath
                        id="pr_icon_clip_1"
                      >
                        <rect
                          fill="white"
                          height="14"
                          width="14"
                        />
                      </clipPath>
                    </defs>
                  </svg>
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              className="p-sortable-column"
              colSpan={null}
              data-p-filter-column={false}
              data-p-frozen-column={false}
              data-p-highlight={null}
              data-p-reorderable-column={false}
              data-p-resizable-column={false}
              data-p-sortable-column={true}
              data-pc-name="datatable"
              data-pc-section="headercell"
              onClick={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              role="columnheader"
              rowSpan={null}
              style={
                Object {
                  "width": "25%",
                }
              }
              tabIndex={0}
            >
              <div
                className="p-column-header-content"
                data-pc-section="headercontent"
              >
                <span
                  className="p-column-title"
                  data-pc-section="headertitle"
                >
                  Description
                </span>
                <span
                  data-pc-section="sort"
                >
                  <svg
                    aria-hidden={true}
                    className="p-icon p-sortable-column-icon"
                    data-pc-section="sorticon"
                    fill="none"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clipPath="url(#pr_icon_clip_2)"
                    >
                      <path
                        d="M5.64515 3.61291C5.47353 3.61291 5.30192 3.54968 5.16644 3.4142L3.38708 1.63484L1.60773 3.4142C1.34579 3.67613 0.912244 3.67613 0.650309 3.4142C0.388374 3.15226 0.388374 2.71871 0.650309 2.45678L2.90837 0.198712C3.17031 -0.0632236 3.60386 -0.0632236 3.86579 0.198712L6.12386 2.45678C6.38579 2.71871 6.38579 3.15226 6.12386 3.4142C5.98837 3.54968 5.81676 3.61291 5.64515 3.61291Z"
                        fill="currentColor"
                      />
                      <path
                        d="M3.38714 14C3.01681 14 2.70972 13.6929 2.70972 13.3226V0.677419C2.70972 0.307097 3.01681 0 3.38714 0C3.75746 0 4.06456 0.307097 4.06456 0.677419V13.3226C4.06456 13.6929 3.75746 14 3.38714 14Z"
                        fill="currentColor"
                      />
                      <path
                        d="M10.6129 14C10.4413 14 10.2697 13.9368 10.1342 13.8013L7.87611 11.5432C7.61418 11.2813 7.61418 10.8477 7.87611 10.5858C8.13805 10.3239 8.5716 10.3239 8.83353 10.5858L10.6129 12.3652L12.3922 10.5858C12.6542 10.3239 13.0877 10.3239 13.3497 10.5858C13.6116 10.8477 13.6116 11.2813 13.3497 11.5432L11.0916 13.8013C10.9561 13.9368 10.7845 14 10.6129 14Z"
                        fill="currentColor"
                      />
                      <path
                        d="M10.6129 14C10.2426 14 9.93552 13.6929 9.93552 13.3226V0.677419C9.93552 0.307097 10.2426 0 10.6129 0C10.9833 0 11.2904 0.307097 11.2904 0.677419V13.3226C11.2904 13.6929 10.9832 14 10.6129 14Z"
                        fill="currentColor"
                      />
                    </g>
                    <defs>
                      <clipPath
                        id="pr_icon_clip_2"
                      >
                        <rect
                          fill="white"
                          height="14"
                          width="14"
                        />
                      </clipPath>
                    </defs>
                  </svg>
                </span>
              </div>
            </th>
            <th
              aria-sort={null}
              colSpan={null}
              data-p-filter-column={false}
              data-p-frozen-column={false}
              data-p-highlight={null}
              data-p-reorderable-column={false}
              data-p-resizable-column={false}
              data-p-sortable-column={false}
              data-pc-name="datatable"
              data-pc-section="headercell"
              onClick={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              role="columnheader"
              rowSpan={null}
              style={
                Object {
                  "textAlign": "center",
                  "width": "5%",
                }
              }
              tabIndex={null}
            >
              <div
                className="p-column-header-content"
                data-pc-section="headercontent"
              >
                <span
                  className="p-column-title"
                  data-pc-section="headertitle"
                >
                  Go
                </span>
              </div>
            </th>
            <th
              aria-sort={null}
              colSpan={null}
              data-p-filter-column={false}
              data-p-frozen-column={false}
              data-p-highlight={null}
              data-p-reorderable-column={false}
              data-p-resizable-column={false}
              data-p-sortable-column={false}
              data-pc-name="datatable"
              data-pc-section="headercell"
              onClick={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              role="columnheader"
              rowSpan={null}
              style={
                Object {
                  "textAlign": "center",
                  "width": "5%",
                }
              }
              tabIndex={null}
            >
              <div
                className="p-column-header-content"
                data-pc-section="headercontent"
              >
                <span
                  className="p-column-title"
                  data-pc-section="headertitle"
                >
                  Fav
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          className="p-datatable-tbody"
          data-pc-section="tbody"
          style={Object {}}
        >
          <tr
            data-p-highlight={false}
            data-p-highlight-contextmenu={false}
            data-p-selectable-row={null}
            data-pc-section="bodyrow"
            onClick={[Function]}
            onContextMenu={[Function]}
            onDoubleClick={[Function]}
            onDragEnd={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            role="row"
            style={
              Object {
                "height": undefined,
              }
            }
            tabIndex={null}
          >
            <td
              data-p-cell-editing={false}
              data-p-editable-column={false}
              data-p-frozen-column={false}
              data-p-selectable-cell={false}
              data-p-selection-column={false}
              data-pc-name="datatable"
              data-pc-section="bodycell"
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              role="cell"
              rowSpan={null}
              style={
                Object {
                  "width": "25%",
                }
              }
              tabIndex={null}
            >
              Repo 1
            </td>
            <td
              data-p-cell-editing={false}
              data-p-editable-column={false}
              data-p-frozen-column={false}
              data-p-selectable-cell={false}
              data-p-selection-column={false}
              data-pc-name="datatable"
              data-pc-section="bodycell"
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              role="cell"
              rowSpan={null}
              style={
                Object {
                  "width": "25%",
                }
              }
              tabIndex={null}
            >
              Description 1
            </td>
            <td
              data-p-cell-editing={false}
              data-p-editable-column={false}
              data-p-frozen-column={false}
              data-p-selectable-cell={false}
              data-p-selection-column={false}
              data-pc-name="datatable"
              data-pc-section="bodycell"
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              role="cell"
              rowSpan={null}
              style={
                Object {
                  "textAlign": "center",
                  "width": "5%",
                }
              }
              tabIndex={null}
            >
              <a
                href="https://example.com/repo1"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  className="p-tag p-component p-tag-success"
                  data-pc-name="tag"
                  data-pc-section="root"
                  style={Object {}}
                >
                  <span
                    className="p-tag-value"
                    data-pc-section="value"
                  />
                  <span>
                    <i
                      className="pi pi-link"
                    />
                  </span>
                </span>
              </a>
            </td>
            <td
              data-p-cell-editing={false}
              data-p-editable-column={false}
              data-p-frozen-column={false}
              data-p-selectable-cell={false}
              data-p-selection-column={false}
              data-pc-name="datatable"
              data-pc-section="bodycell"
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              role="cell"
              rowSpan={null}
              style={
                Object {
                  "textAlign": "center",
                  "width": "5%",
                }
              }
              tabIndex={null}
            >
              <button
                className="p-button-sm p-button-text p-button p-component p-button-icon-only"
                data-pc-name="button"
                data-pc-section="root"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="p-button-icon p-c pi pi-star-fill"
                  data-pc-section="icon"
                />
                <span
                  className="p-button-label p-c"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&nbsp;",
                    }
                  }
                />
              </button>
            </td>
          </tr>
          <tr
            className="p-row-odd"
            data-p-highlight={false}
            data-p-highlight-contextmenu={false}
            data-p-selectable-row={null}
            data-pc-section="bodyrow"
            onClick={[Function]}
            onContextMenu={[Function]}
            onDoubleClick={[Function]}
            onDragEnd={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            role="row"
            style={
              Object {
                "height": undefined,
              }
            }
            tabIndex={null}
          >
            <td
              data-p-cell-editing={false}
              data-p-editable-column={false}
              data-p-frozen-column={false}
              data-p-selectable-cell={false}
              data-p-selection-column={false}
              data-pc-name="datatable"
              data-pc-section="bodycell"
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              role="cell"
              rowSpan={null}
              style={
                Object {
                  "width": "25%",
                }
              }
              tabIndex={null}
            >
              Repo 2
            </td>
            <td
              data-p-cell-editing={false}
              data-p-editable-column={false}
              data-p-frozen-column={false}
              data-p-selectable-cell={false}
              data-p-selection-column={false}
              data-pc-name="datatable"
              data-pc-section="bodycell"
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              role="cell"
              rowSpan={null}
              style={
                Object {
                  "width": "25%",
                }
              }
              tabIndex={null}
            >
              Description 2
            </td>
            <td
              data-p-cell-editing={false}
              data-p-editable-column={false}
              data-p-frozen-column={false}
              data-p-selectable-cell={false}
              data-p-selection-column={false}
              data-pc-name="datatable"
              data-pc-section="bodycell"
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              role="cell"
              rowSpan={null}
              style={
                Object {
                  "textAlign": "center",
                  "width": "5%",
                }
              }
              tabIndex={null}
            >
              <a
                href="https://example.com/repo2"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  className="p-tag p-component p-tag-success"
                  data-pc-name="tag"
                  data-pc-section="root"
                  style={Object {}}
                >
                  <span
                    className="p-tag-value"
                    data-pc-section="value"
                  />
                  <span>
                    <i
                      className="pi pi-link"
                    />
                  </span>
                </span>
              </a>
            </td>
            <td
              data-p-cell-editing={false}
              data-p-editable-column={false}
              data-p-frozen-column={false}
              data-p-selectable-cell={false}
              data-p-selection-column={false}
              data-pc-name="datatable"
              data-pc-section="bodycell"
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              role="cell"
              rowSpan={null}
              style={
                Object {
                  "textAlign": "center",
                  "width": "5%",
                }
              }
              tabIndex={null}
            >
              <button
                className="p-button-sm p-button-text p-button p-component p-button-icon-only"
                data-pc-name="button"
                data-pc-section="root"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="p-button-icon p-c pi pi-star-fill"
                  data-pc-section="icon"
                />
                <span
                  className="p-button-label p-c"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&nbsp;",
                    }
                  }
                />
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="p-paginator-bottom p-paginator p-component"
      data-pc-name="paginator"
      data-pc-section="root"
      style={Object {}}
    >
      <button
        aria-label="First Page"
        className="p-paginator-first p-paginator-element p-link p-disabled"
        data-pc-section="firstpagebutton"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="p-icon p-paginator-icon"
          data-pc-section="firstpageicon"
          fill="none"
          height="14"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M5.71602 11.164C5.80782 11.2021 5.9063 11.2215 6.00569 11.221C6.20216 11.2301 6.39427 11.1612 6.54025 11.0294C6.68191 10.8875 6.76148 10.6953 6.76148 10.4948C6.76148 10.2943 6.68191 10.1021 6.54025 9.96024L3.51441 6.9344L6.54025 3.90855C6.624 3.76126 6.65587 3.59011 6.63076 3.42254C6.60564 3.25498 6.525 3.10069 6.40175 2.98442C6.2785 2.86815 6.11978 2.79662 5.95104 2.7813C5.78229 2.76598 5.61329 2.80776 5.47112 2.89994L1.97123 6.39983C1.82957 6.54167 1.75 6.73393 1.75 6.9344C1.75 7.13486 1.82957 7.32712 1.97123 7.46896L5.47112 10.9991C5.54096 11.0698 5.62422 11.1259 5.71602 11.164ZM11.0488 10.9689C11.1775 11.1156 11.3585 11.2061 11.5531 11.221C11.7477 11.2061 11.9288 11.1156 12.0574 10.9689C12.1815 10.8302 12.25 10.6506 12.25 10.4645C12.25 10.2785 12.1815 10.0989 12.0574 9.96024L9.03158 6.93439L12.0574 3.90855C12.1248 3.76739 12.1468 3.60881 12.1204 3.45463C12.0939 3.30045 12.0203 3.15826 11.9097 3.04765C11.7991 2.93703 11.6569 2.86343 11.5027 2.83698C11.3486 2.81053 11.19 2.83252 11.0488 2.89994L7.51865 6.36957C7.37699 6.51141 7.29742 6.70367 7.29742 6.90414C7.29742 7.1046 7.37699 7.29686 7.51865 7.4387L11.0488 10.9689Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Previous Page"
        className="p-paginator-prev p-paginator-element p-link p-disabled"
        data-pc-section="prevpagebutton"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="p-icon p-paginator-icon"
          data-pc-section="prevpageicon"
          fill="none"
          height="14"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.75 11.185C8.65146 11.1854 8.55381 11.1662 8.4628 11.1284C8.37179 11.0906 8.28924 11.0351 8.22 10.965L4.72 7.46496C4.57955 7.32433 4.50066 7.13371 4.50066 6.93496C4.50066 6.73621 4.57955 6.54558 4.72 6.40496L8.22 2.93496C8.36095 2.84357 8.52851 2.80215 8.69582 2.81733C8.86312 2.83252 9.02048 2.90344 9.14268 3.01872C9.26487 3.134 9.34483 3.28696 9.36973 3.4531C9.39463 3.61924 9.36303 3.78892 9.28 3.93496L6.28 6.93496L9.28 9.93496C9.42045 10.0756 9.49934 10.2662 9.49934 10.465C9.49934 10.6637 9.42045 10.8543 9.28 10.995C9.13526 11.1257 8.9448 11.1939 8.75 11.185Z"
            fill="currentColor"
          />
        </svg>
      </button>
      <span
        className="p-paginator-pages"
        data-pc-section="pages"
      >
        <button
          aria-label="Page 1"
          className="p-paginator-page p-paginator-element p-link p-paginator-page-start p-paginator-page-end p-highlight"
          data-pc-section="pagebutton"
          onClick={[Function]}
          type="button"
        >
          1
        </button>
      </span>
      <button
        aria-label="Next Page"
        className="p-paginator-next p-paginator-element p-link p-disabled"
        data-pc-section="nextpagebutton"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="p-icon p-paginator-icon"
          data-pc-section="nextpageicon"
          fill="none"
          height="14"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.25 11.1728C5.14929 11.1694 5.05033 11.1455 4.9592 11.1025C4.86806 11.0595 4.78666 10.9984 4.72 10.9228C4.57955 10.7822 4.50066 10.5916 4.50066 10.3928C4.50066 10.1941 4.57955 10.0035 4.72 9.86283L7.72 6.86283L4.72 3.86283C4.66067 3.71882 4.64765 3.55991 4.68275 3.40816C4.71785 3.25642 4.79932 3.11936 4.91585 3.01602C5.03238 2.91268 5.17819 2.84819 5.33305 2.83149C5.4879 2.81479 5.64411 2.84671 5.78 2.92283L9.28 6.42283C9.42045 6.56346 9.49934 6.75408 9.49934 6.95283C9.49934 7.15158 9.42045 7.34221 9.28 7.48283L5.78 10.9228C5.71333 10.9984 5.63193 11.0595 5.5408 11.1025C5.44966 11.1455 5.35071 11.1694 5.25 11.1728Z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="Last Page"
        className="p-paginator-last p-paginator-element p-link p-disabled"
        data-pc-section="lastpagebutton"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="p-icon p-paginator-icon"
          data-pc-section="lastpageicon"
          fill="none"
          height="14"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M7.68757 11.1451C7.7791 11.1831 7.8773 11.2024 7.9764 11.2019C8.07769 11.1985 8.17721 11.1745 8.26886 11.1312C8.36052 11.088 8.44238 11.0265 8.50943 10.9505L12.0294 7.49085C12.1707 7.34942 12.25 7.15771 12.25 6.95782C12.25 6.75794 12.1707 6.56622 12.0294 6.42479L8.50943 2.90479C8.37014 2.82159 8.20774 2.78551 8.04633 2.80192C7.88491 2.81833 7.73309 2.88635 7.6134 2.99588C7.4937 3.10541 7.41252 3.25061 7.38189 3.40994C7.35126 3.56927 7.37282 3.73423 7.44337 3.88033L10.4605 6.89748L7.44337 9.91463C7.30212 10.0561 7.22278 10.2478 7.22278 10.4477C7.22278 10.6475 7.30212 10.8393 7.44337 10.9807C7.51301 11.0512 7.59603 11.1071 7.68757 11.1451ZM1.94207 10.9505C2.07037 11.0968 2.25089 11.1871 2.44493 11.2019C2.63898 11.1871 2.81949 11.0968 2.94779 10.9505L6.46779 7.49085C6.60905 7.34942 6.68839 7.15771 6.68839 6.95782C6.68839 6.75793 6.60905 6.56622 6.46779 6.42479L2.94779 2.90479C2.80704 2.83757 2.6489 2.81563 2.49517 2.84201C2.34143 2.86839 2.19965 2.94178 2.08936 3.05207C1.97906 3.16237 1.90567 3.30415 1.8793 3.45788C1.85292 3.61162 1.87485 3.76975 1.94207 3.9105L4.95922 6.92765L1.94207 9.9448C1.81838 10.0831 1.75 10.2621 1.75 10.4477C1.75 10.6332 1.81838 10.8122 1.94207 10.9505Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    className="Toastify"
  />
</div>
`;

exports[`Unit Test for Components (renderer) GitTable handles error correctly 1`] = `
<div
  className="card-datatable"
>
  <h1>
    Repositories
  </h1>
  <div
    className="p-datatable p-component p-datatable-responsive-scroll"
    data-pc-name="datatable"
    data-pc-section="root"
    data-scrollselectors=".p-datatable-wrapper"
    id={null}
    style={Object {}}
  >
    <div
      className="p-datatable-header"
      data-pc-section="header"
    >
      <div
        className="flex justify-content-end"
      >
        <span
          className="p-input-icon-left"
        >
          <i
            className="pi pi-search"
          />
          <input
            className="p-inputtext p-component"
            data-pc-name="inputtext"
            data-pc-section="root"
            onBeforeInput={[Function]}
            onChange={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onPaste={[Function]}
            placeholder="Keyword Search"
            value=""
          />
        </span>
      </div>
    </div>
    <div
      className="p-datatable-wrapper"
      data-pc-section="wrapper"
      style={
        Object {
          "maxHeight": null,
          "overflow": "auto",
        }
      }
    >
      <table
        className="p-datatable-table"
        data-pc-section="table"
        role="table"
        style={
          Object {
            "width": "70vw",
          }
        }
      >
        <thead
          className="p-datatable-thead"
          data-pc-name="datatable"
          data-pc-section="thead"
        >
          <tr
            data-pc-section="headerrow"
            role="row"
          >
            <th
              aria-sort="none"
              className="p-sortable-column"
              colSpan={null}
              data-p-filter-column={false}
              data-p-frozen-column={false}
              data-p-highlight={null}
              data-p-reorderable-column={false}
              data-p-resizable-column={false}
              data-p-sortable-column={true}
              data-pc-name="datatable"
              data-pc-section="headercell"
              onClick={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              role="columnheader"
              rowSpan={null}
              style={
                Object {
                  "width": "25%",
                }
              }
              tabIndex={0}
            >
              <div
                className="p-column-header-content"
                data-pc-section="headercontent"
              >
                <span
                  className="p-column-title"
                  data-pc-section="headertitle"
                >
                  Name
                </span>
                <span
                  data-pc-section="sort"
                >
                  <svg
                    aria-hidden={true}
                    className="p-icon p-sortable-column-icon"
                    data-pc-section="sorticon"
                    fill="none"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clipPath="url(#pr_icon_clip_3)"
                    >
                      <path
                        d="M5.64515 3.61291C5.47353 3.61291 5.30192 3.54968 5.16644 3.4142L3.38708 1.63484L1.60773 3.4142C1.34579 3.67613 0.912244 3.67613 0.650309 3.4142C0.388374 3.15226 0.388374 2.71871 0.650309 2.45678L2.90837 0.198712C3.17031 -0.0632236 3.60386 -0.0632236 3.86579 0.198712L6.12386 2.45678C6.38579 2.71871 6.38579 3.15226 6.12386 3.4142C5.98837 3.54968 5.81676 3.61291 5.64515 3.61291Z"
                        fill="currentColor"
                      />
                      <path
                        d="M3.38714 14C3.01681 14 2.70972 13.6929 2.70972 13.3226V0.677419C2.70972 0.307097 3.01681 0 3.38714 0C3.75746 0 4.06456 0.307097 4.06456 0.677419V13.3226C4.06456 13.6929 3.75746 14 3.38714 14Z"
                        fill="currentColor"
                      />
                      <path
                        d="M10.6129 14C10.4413 14 10.2697 13.9368 10.1342 13.8013L7.87611 11.5432C7.61418 11.2813 7.61418 10.8477 7.87611 10.5858C8.13805 10.3239 8.5716 10.3239 8.83353 10.5858L10.6129 12.3652L12.3922 10.5858C12.6542 10.3239 13.0877 10.3239 13.3497 10.5858C13.6116 10.8477 13.6116 11.2813 13.3497 11.5432L11.0916 13.8013C10.9561 13.9368 10.7845 14 10.6129 14Z"
                        fill="currentColor"
                      />
                      <path
                        d="M10.6129 14C10.2426 14 9.93552 13.6929 9.93552 13.3226V0.677419C9.93552 0.307097 10.2426 0 10.6129 0C10.9833 0 11.2904 0.307097 11.2904 0.677419V13.3226C11.2904 13.6929 10.9832 14 10.6129 14Z"
                        fill="currentColor"
                      />
                    </g>
                    <defs>
                      <clipPath
                        id="pr_icon_clip_3"
                      >
                        <rect
                          fill="white"
                          height="14"
                          width="14"
                        />
                      </clipPath>
                    </defs>
                  </svg>
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              className="p-sortable-column"
              colSpan={null}
              data-p-filter-column={false}
              data-p-frozen-column={false}
              data-p-highlight={null}
              data-p-reorderable-column={false}
              data-p-resizable-column={false}
              data-p-sortable-column={true}
              data-pc-name="datatable"
              data-pc-section="headercell"
              onClick={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              role="columnheader"
              rowSpan={null}
              style={
                Object {
                  "width": "25%",
                }
              }
              tabIndex={0}
            >
              <div
                className="p-column-header-content"
                data-pc-section="headercontent"
              >
                <span
                  className="p-column-title"
                  data-pc-section="headertitle"
                >
                  Description
                </span>
                <span
                  data-pc-section="sort"
                >
                  <svg
                    aria-hidden={true}
                    className="p-icon p-sortable-column-icon"
                    data-pc-section="sorticon"
                    fill="none"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      clipPath="url(#pr_icon_clip_4)"
                    >
                      <path
                        d="M5.64515 3.61291C5.47353 3.61291 5.30192 3.54968 5.16644 3.4142L3.38708 1.63484L1.60773 3.4142C1.34579 3.67613 0.912244 3.67613 0.650309 3.4142C0.388374 3.15226 0.388374 2.71871 0.650309 2.45678L2.90837 0.198712C3.17031 -0.0632236 3.60386 -0.0632236 3.86579 0.198712L6.12386 2.45678C6.38579 2.71871 6.38579 3.15226 6.12386 3.4142C5.98837 3.54968 5.81676 3.61291 5.64515 3.61291Z"
                        fill="currentColor"
                      />
                      <path
                        d="M3.38714 14C3.01681 14 2.70972 13.6929 2.70972 13.3226V0.677419C2.70972 0.307097 3.01681 0 3.38714 0C3.75746 0 4.06456 0.307097 4.06456 0.677419V13.3226C4.06456 13.6929 3.75746 14 3.38714 14Z"
                        fill="currentColor"
                      />
                      <path
                        d="M10.6129 14C10.4413 14 10.2697 13.9368 10.1342 13.8013L7.87611 11.5432C7.61418 11.2813 7.61418 10.8477 7.87611 10.5858C8.13805 10.3239 8.5716 10.3239 8.83353 10.5858L10.6129 12.3652L12.3922 10.5858C12.6542 10.3239 13.0877 10.3239 13.3497 10.5858C13.6116 10.8477 13.6116 11.2813 13.3497 11.5432L11.0916 13.8013C10.9561 13.9368 10.7845 14 10.6129 14Z"
                        fill="currentColor"
                      />
                      <path
                        d="M10.6129 14C10.2426 14 9.93552 13.6929 9.93552 13.3226V0.677419C9.93552 0.307097 10.2426 0 10.6129 0C10.9833 0 11.2904 0.307097 11.2904 0.677419V13.3226C11.2904 13.6929 10.9832 14 10.6129 14Z"
                        fill="currentColor"
                      />
                    </g>
                    <defs>
                      <clipPath
                        id="pr_icon_clip_4"
                      >
                        <rect
                          fill="white"
                          height="14"
                          width="14"
                        />
                      </clipPath>
                    </defs>
                  </svg>
                </span>
              </div>
            </th>
            <th
              aria-sort={null}
              colSpan={null}
              data-p-filter-column={false}
              data-p-frozen-column={false}
              data-p-highlight={null}
              data-p-reorderable-column={false}
              data-p-resizable-column={false}
              data-p-sortable-column={false}
              data-pc-name="datatable"
              data-pc-section="headercell"
              onClick={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              role="columnheader"
              rowSpan={null}
              style={
                Object {
                  "textAlign": "center",
                  "width": "5%",
                }
              }
              tabIndex={null}
            >
              <div
                className="p-column-header-content"
                data-pc-section="headercontent"
              >
                <span
                  className="p-column-title"
                  data-pc-section="headertitle"
                >
                  Go
                </span>
              </div>
            </th>
            <th
              aria-sort={null}
              colSpan={null}
              data-p-filter-column={false}
              data-p-frozen-column={false}
              data-p-highlight={null}
              data-p-reorderable-column={false}
              data-p-resizable-column={false}
              data-p-sortable-column={false}
              data-pc-name="datatable"
              data-pc-section="headercell"
              onClick={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDragStart={[Function]}
              onDrop={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              role="columnheader"
              rowSpan={null}
              style={
                Object {
                  "textAlign": "center",
                  "width": "5%",
                }
              }
              tabIndex={null}
            >
              <div
                className="p-column-header-content"
                data-pc-section="headercontent"
              >
                <span
                  className="p-column-title"
                  data-pc-section="headertitle"
                >
                  Fav
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          className="p-datatable-tbody"
          data-pc-section="tbody"
          style={Object {}}
        >
          <tr
            className="p-datatable-emptymessage"
            data-pc-section="emptymessage"
            role="row"
          >
            <td
              colSpan={4}
              data-pc-name="datatable"
              data-pc-section="bodycell"
              role="cell"
            >
              No results found
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="p-paginator-bottom p-paginator p-component"
      data-pc-name="paginator"
      data-pc-section="root"
      style={Object {}}
    >
      <button
        aria-label="First Page"
        className="p-paginator-first p-paginator-element p-link p-disabled"
        data-pc-section="firstpagebutton"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="p-icon p-paginator-icon"
          data-pc-section="firstpageicon"
          fill="none"
          height="14"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M5.71602 11.164C5.80782 11.2021 5.9063 11.2215 6.00569 11.221C6.20216 11.2301 6.39427 11.1612 6.54025 11.0294C6.68191 10.8875 6.76148 10.6953 6.76148 10.4948C6.76148 10.2943 6.68191 10.1021 6.54025 9.96024L3.51441 6.9344L6.54025 3.90855C6.624 3.76126 6.65587 3.59011 6.63076 3.42254C6.60564 3.25498 6.525 3.10069 6.40175 2.98442C6.2785 2.86815 6.11978 2.79662 5.95104 2.7813C5.78229 2.76598 5.61329 2.80776 5.47112 2.89994L1.97123 6.39983C1.82957 6.54167 1.75 6.73393 1.75 6.9344C1.75 7.13486 1.82957 7.32712 1.97123 7.46896L5.47112 10.9991C5.54096 11.0698 5.62422 11.1259 5.71602 11.164ZM11.0488 10.9689C11.1775 11.1156 11.3585 11.2061 11.5531 11.221C11.7477 11.2061 11.9288 11.1156 12.0574 10.9689C12.1815 10.8302 12.25 10.6506 12.25 10.4645C12.25 10.2785 12.1815 10.0989 12.0574 9.96024L9.03158 6.93439L12.0574 3.90855C12.1248 3.76739 12.1468 3.60881 12.1204 3.45463C12.0939 3.30045 12.0203 3.15826 11.9097 3.04765C11.7991 2.93703 11.6569 2.86343 11.5027 2.83698C11.3486 2.81053 11.19 2.83252 11.0488 2.89994L7.51865 6.36957C7.37699 6.51141 7.29742 6.70367 7.29742 6.90414C7.29742 7.1046 7.37699 7.29686 7.51865 7.4387L11.0488 10.9689Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Previous Page"
        className="p-paginator-prev p-paginator-element p-link p-disabled"
        data-pc-section="prevpagebutton"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="p-icon p-paginator-icon"
          data-pc-section="prevpageicon"
          fill="none"
          height="14"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.75 11.185C8.65146 11.1854 8.55381 11.1662 8.4628 11.1284C8.37179 11.0906 8.28924 11.0351 8.22 10.965L4.72 7.46496C4.57955 7.32433 4.50066 7.13371 4.50066 6.93496C4.50066 6.73621 4.57955 6.54558 4.72 6.40496L8.22 2.93496C8.36095 2.84357 8.52851 2.80215 8.69582 2.81733C8.86312 2.83252 9.02048 2.90344 9.14268 3.01872C9.26487 3.134 9.34483 3.28696 9.36973 3.4531C9.39463 3.61924 9.36303 3.78892 9.28 3.93496L6.28 6.93496L9.28 9.93496C9.42045 10.0756 9.49934 10.2662 9.49934 10.465C9.49934 10.6637 9.42045 10.8543 9.28 10.995C9.13526 11.1257 8.9448 11.1939 8.75 11.185Z"
            fill="currentColor"
          />
        </svg>
      </button>
      <span
        className="p-paginator-pages"
        data-pc-section="pages"
      />
      <button
        aria-label="Next Page"
        className="p-paginator-next p-paginator-element p-link p-disabled"
        data-pc-section="nextpagebutton"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="p-icon p-paginator-icon"
          data-pc-section="nextpageicon"
          fill="none"
          height="14"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.25 11.1728C5.14929 11.1694 5.05033 11.1455 4.9592 11.1025C4.86806 11.0595 4.78666 10.9984 4.72 10.9228C4.57955 10.7822 4.50066 10.5916 4.50066 10.3928C4.50066 10.1941 4.57955 10.0035 4.72 9.86283L7.72 6.86283L4.72 3.86283C4.66067 3.71882 4.64765 3.55991 4.68275 3.40816C4.71785 3.25642 4.79932 3.11936 4.91585 3.01602C5.03238 2.91268 5.17819 2.84819 5.33305 2.83149C5.4879 2.81479 5.64411 2.84671 5.78 2.92283L9.28 6.42283C9.42045 6.56346 9.49934 6.75408 9.49934 6.95283C9.49934 7.15158 9.42045 7.34221 9.28 7.48283L5.78 10.9228C5.71333 10.9984 5.63193 11.0595 5.5408 11.1025C5.44966 11.1455 5.35071 11.1694 5.25 11.1728Z"
            fill="currentColor"
          />
        </svg>
      </button>
      <button
        aria-label="Last Page"
        className="p-paginator-last p-paginator-element p-link p-disabled"
        data-pc-section="lastpagebutton"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden={true}
          className="p-icon p-paginator-icon"
          data-pc-section="lastpageicon"
          fill="none"
          height="14"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M7.68757 11.1451C7.7791 11.1831 7.8773 11.2024 7.9764 11.2019C8.07769 11.1985 8.17721 11.1745 8.26886 11.1312C8.36052 11.088 8.44238 11.0265 8.50943 10.9505L12.0294 7.49085C12.1707 7.34942 12.25 7.15771 12.25 6.95782C12.25 6.75794 12.1707 6.56622 12.0294 6.42479L8.50943 2.90479C8.37014 2.82159 8.20774 2.78551 8.04633 2.80192C7.88491 2.81833 7.73309 2.88635 7.6134 2.99588C7.4937 3.10541 7.41252 3.25061 7.38189 3.40994C7.35126 3.56927 7.37282 3.73423 7.44337 3.88033L10.4605 6.89748L7.44337 9.91463C7.30212 10.0561 7.22278 10.2478 7.22278 10.4477C7.22278 10.6475 7.30212 10.8393 7.44337 10.9807C7.51301 11.0512 7.59603 11.1071 7.68757 11.1451ZM1.94207 10.9505C2.07037 11.0968 2.25089 11.1871 2.44493 11.2019C2.63898 11.1871 2.81949 11.0968 2.94779 10.9505L6.46779 7.49085C6.60905 7.34942 6.68839 7.15771 6.68839 6.95782C6.68839 6.75793 6.60905 6.56622 6.46779 6.42479L2.94779 2.90479C2.80704 2.83757 2.6489 2.81563 2.49517 2.84201C2.34143 2.86839 2.19965 2.94178 2.08936 3.05207C1.97906 3.16237 1.90567 3.30415 1.8793 3.45788C1.85292 3.61162 1.87485 3.76975 1.94207 3.9105L4.95922 6.92765L1.94207 9.9448C1.81838 10.0831 1.75 10.2621 1.75 10.4477C1.75 10.6332 1.81838 10.8122 1.94207 10.9505Z"
            fill="currentColor"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    className="Toastify"
  />
</div>
`;
